--- a/flightweb/src/main/resources/templates/index.html
+++ b/flightweb/src/main/resources/templates/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:fragment="head (title)">
     <meta charset="UTF-8" />
-    <title>首页 || 机票订购系统</title>
+    <title th:text="${title ?: '首页'} + ' || 机票订购系统'">机票订购系统</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" media="screen"/>
-    <link rel="stylesheet" href="css/login.css" media="screen"/>
-    <link rel="stylesheet" href="css/page.css" media="screen"/>
-    <link rel="stylesheet" href="css/detail.css" media="screen"/>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" media="screen"/>
+    <link rel="stylesheet" href="/css/sweet-alert.css"/>
+    <link rel="stylesheet" href="/css/sticky-footer-navbar.css"/>
+
+    <script src="/js/sweet-alert.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.form.js"></script>
 
 </head>
 <body>
-<div th:fragment="navi">
-<nav class="navbar navbar-default" style="font-weight:bolder;font-size:large">
-    <div class="container-fluid">
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top" th:fragment="navi">
+    <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"></a>
+            <a class="navbar-brand" href="#">机票订购系统</a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
+        <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">机票订购系统</a></li>
+                <li class="active"><a href="/">首页</a></li>
                 <li><a href="/ticket/find">机票查询</a></li>
             </ul>
 
@@ -65,32 +65,38 @@
                     </ul>
                 </li>
             </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        </div><!--/.nav-collapse -->
+    </div>
 </nav>
-</div>
 
 <!-- Begin page content -->
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
             <div class="page-header">
                 <h1>欢迎来到机票预订系统</h1>
             </div>
             <p class="lead">
                 你可以查询、预订<a href="/ticket/find">机票信息</a>，
-                支付<a href="/user/order">未完成订单</a>，
-                以及查询<a href="/user/history">历史订单</a>。
+                以及查询<a href="/user/order">历史订单</a>。
             </p>
             <p class="lead">
                 你还可以查看<a href="/user/info">个人信息</a>，
                 <a href="/user/change">修改密码</a>。
             </p>
         </div>
-        <div class="col-md-3"></div>
+
+        <div class="col-md-2"></div>
     </div>
 </div>
+
+<footer class="footer" th:fragment="footer">
+    <div class="container">
+        <p>Copyright © Fudan University 2016</p>
+        <p>All Rights Reserved</p>
+    </div>
+</footer>
 </body>
 <script type="text/javascript">
     $(".navbar-collapse>ul>li").eq(0).addClass("active");
