--- a/flightweb/src/main/resources/templates/user/register.html
+++ b/flightweb/src/main/resources/templates/user/register.html
@@ -1,59 +1,89 @@
 <!DOCtype html>
-<html lang="zh-cmn-Hans">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewporrt" content ="width=device-width, initial-scale=1" />
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewporrt" content ="width=device-width, initial-scale=1"/>
 
+    <title>注册 || 机票订购系统</title>
+    <meta name="description" content=" "/>
+    <meta name="keywords" content="metadata"/>
+    <meta name="author" content=" "/>
 
-		<title>注册 || 机票订购系统</title>
-		<meta name="description" content=" " />
-		<meta name="keywords" content="metadata" />
-		<meta name="author" content=" " />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" media="screen"/>
+    <link rel="stylesheet" href="/css/login.css" media="screen"/>
+    <link rel="stylesheet" href="/css/sticky-footer-navbar.css"/>
+    <link rel="stylesheet" href="/css/sweet-alert.css"/>
 
+    <script src="/js/sweet-alert.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.form.js"></script>
 
-		<link rel="stylesheet" href="/css/bootstrap.min.css" media="screen"></link>
-		<link rel="stylesheet" href="/css/login.css" media="screen"></link>
-		<script src="/js/jquery.min.js"></script>
-		<script src="/js/bootstrap.min.js"></script>
-	</head>
-	<body>
-		<div class="container-fluid my-container">
-			<header>
-				<h1>注册</h1>
-				<hr class="col-sm-6 col-sm-offset-3" />
-			</header>
-			<section class="container">
-				<form class="form-horizontal col-sm-offset-2 vertical" style="text-align:center" method="POST" action="/user/register">
-					<div class="form-group form-group-lg">
-						<label for="inputUsername" class="col-sm-3 control-label">用户名</label>
-						<div class="col-sm-4">
-						   	<input type="text" name="username" class="form-control" id="inputUsername" />
-						</div>
-					</div>
-					<div class="form-group form-group-lg">
-					    <label for="inputPassword" class="col-sm-3 control-label">密码</label>
-					    <div class="col-sm-4">
-					    	<input type="password" name="password" class="form-control" id="inputPassword" />
-						</div>
-					</div>
-					<div class="form-group form-group-lg">
-					    <label for="inputPassword2" class="col-sm-3 control-label">确认密码</label>
-					    <div class="col-sm-4">
-					    	<input type="password" name="password2" class="form-control" id="inputPassword2" />
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-offset-3 col-sm-4">
-						    <button type="submit" class="btn btn-default btn-lg">注册</button>
-						</div>
-					</div>
-			    </form>
-	        </section>
-		    <footer>
-		    	<p>Copyright © Fudan University 2015</p>
-		    	<p>All Rights Reserved</p>
-		    </footer>
-		</div>
-	</body>
+</head>
+<body>
+    <div th:replace="index::navi"></div>
+    <div class="container-fluid my-container">
+        <header>
+            <h1>注册</h1>
+            <hr class="col-sm-6 col-sm-offset-3" />
+        </header>
+        <section class="container">
+            <form class="form-horizontal col-sm-offset-2 vertical" style="text-align:center" method="POST" action="/user/register">
+                <div class="form-group form-group-lg">
+                    <label for="inputUsername" class="col-sm-3 control-label">用户名</label>
+                    <div class="col-sm-4">
+                        <input type="text" name="username" class="form-control" id="inputUsername" />
+                    </div>
+                </div>
+                <div class="form-group form-group-lg">
+                    <label for="inputPassword" class="col-sm-3 control-label">密码</label>
+                    <div class="col-sm-4">
+                        <input type="password" name="password" class="form-control" id="inputPassword" />
+                    </div>
+                </div>
+                <div class="form-group form-group-lg">
+                    <label for="inputPassword2" class="col-sm-3 control-label">确认密码</label>
+                    <div class="col-sm-4">
+                        <input type="password" name="password2" class="form-control" id="inputPassword2" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-4">
+                        <button type="submit" id="submit" class="btn btn-default btn-lg">注册</button>
+                    </div>
+                </div>
+            </form>
+        </section>
+    </div>
+    <footer th:replace="index::footer"></footer>
+    <script type="text/javascript">
+    $("#submit").click(function(){
+        $("form").ajaxSubmit(function(data){
+            if(data.error!=0){
+                    swal("Error...",data.message,"error");
+                    setTimeout(failjump,1000);
+                    function failjump(){
+                        if(data.error==2){window.location.href="/user/register"}
+                    }
+                 }
+            else{
+                 swal({
+                     title:"Success!",
+                     text:"注册成功!",
+                     type:"success",
+                     timer:2000}
+                 )
+                 setTimeout(jump,1000);
+                 function jump(){
+                   if(window.location.pathname!="/user/login") {
+                     window.location.href = "/user/login";
+                   }
+                 }
+            }
+        });
+    return false;
+    });
+    </script>
+</body>
 </html>
