--- a/flightweb/src/main/resources/templates/user/register.html
+++ b/flightweb/src/main/resources/templates/user/register.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css" media="screen"/>
     <link rel="stylesheet" href="/css/login.css" media="screen"/>
     <link rel="stylesheet" href="/css/sticky-footer-navbar.css"/>
-    <link rel="stylesheet" href="/css/sweet-alert.css"/>
+    <link rel="stylesheet" href="/css/sweetalert.css"/>
 
-    <script src="/js/sweet-alert.js"></script>
+    <script src="/js/sweetalert-dev.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/jquery.form.js"></script>
