--- a/flightweb/src/main/resources/templates/index.html
+++ b/flightweb/src/main/resources/templates/index.html
@@ -5,10 +5,10 @@
     <title th:text="${title ?: '首页'} + ' || 机票订购系统'">机票订购系统</title>
 
     <link rel="stylesheet" href="/css/bootstrap.min.css" media="screen"/>
-    <link rel="stylesheet" href="/css/sweet-alert.css"/>
+    <link rel="stylesheet" href="/css/sweetalert.css"/>
     <link rel="stylesheet" href="/css/sticky-footer-navbar.css"/>
 
-    <script src="/js/sweet-alert.js"></script>
+    <script src="/js/sweetalert-dev.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/jquery.form.js"></script>
@@ -25,7 +25,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">机票订购系统</a>
+            <a class="navbar-brand" href="#">机票预订系统</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -36,19 +36,9 @@
             <ul class="nav navbar-nav navbar-right">
                 <li th:if="${session.META_USER}==null"><a href="/user/login">登录</a></li>
                 <li th:if="${session.META_USER}==null"><a href="/user/register">注册</a></li>
-
-                <li role="presentation" class="dropdown" th:if="${session.META_USER}!=null">
-                    <a class="dropdown-toggle" data-toggle="dropdown"
-                       href="#" role="button" aria-haspopup="true"
-                       aria-expanded="false">
-                        订单管理
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/user/order">未完成订单</a></li>
-                        <li><a href="/user/history">历史订单</a></li>
-                    </ul>
-                </li>
+                <li th:if="${session.META_USER}!=null and ${session.META_USER.role}=='admin'"><a href="/admin/flight">添加航班</a></li>
+                <!--li th:if="${session.META_USER}!=null and ${session.META_USER.role}=='admin'"><a href="/admin/user">管理用户</a></li-->
+                <li th:if="${session.META_USER}!=null and ${session.META_USER.role}=='user'"><a href="/user/order">历史订单</a></li>
 
                 <li role="presentation" class="dropdown" th:if="${session.META_USER}!=null">
                     <a class="dropdown-toggle" data-toggle="dropdown"
@@ -77,13 +67,20 @@
             <div class="page-header">
                 <h1>欢迎来到机票预订系统</h1>
             </div>
-            <p class="lead">
+            <p class="lead" th:if="${session.META_USER}!=null and ${session.META_USER.role}=='user'">
                 你可以查询、预订<a href="/ticket/find">机票信息</a>，
                 以及查询<a href="/user/order">历史订单</a>。
             </p>
-            <p class="lead">
+            <p class="lead" th:if="${session.META_USER}!=null and ${session.META_USER.role}=='admin'">
+                你可以<a href="/admin/flight">添加航班</a>。
+                <!--以及<a href="/admin/user">管理用户</a>。-->
+            </p>
+            <p class="lead"  th:if="${session.META_USER}!=null">
                 你还可以查看<a href="/user/info">个人信息</a>，
                 <a href="/user/change">修改密码</a>。
+            </p>
+            <p class="lead"  th:if="${session.META_USER}==null">
+                请先<a href="/user/login">登录</a>。
             </p>
         </div>
 
