--- a/flightweb/src/main/resources/templates/user/change.html
+++ b/flightweb/src/main/resources/templates/user/change.html
@@ -53,7 +53,7 @@
                 title:"Success!",
                 text:" 修改成功!",
                 type:"success",
-                timer:2000})
+                timer:2000});
             }
 
         });
