--- a/flightweb/src/main/resources/templates/user/order.html
+++ b/flightweb/src/main/resources/templates/user/order.html
@@ -36,7 +36,7 @@
             <div class="page-header">
                 <h1>查找结果</h1>
             </div>
-            <table class="table table-hover" id="searchRet">
+            <table class="table table-hover" id="searchHistoryRet">
                 <thead>
                     <tr>
                         <th>航班编号</th>
