--- a/flightweb/src/main/resources/templates/ticket/find.html
+++ b/flightweb/src/main/resources/templates/ticket/find.html
@@ -63,5 +63,6 @@
 
 <footer th:replace="index::footer"></footer>
 <script src="/js/findTicket.js"></script>
+<script th:replace="index::nav-active-js"></script>
 </body>
 </html>
