--- a/flightweb/src/main/resources/templates/user/order.html
+++ b/flightweb/src/main/resources/templates/user/order.html
@@ -61,5 +61,6 @@
 
 <footer th:replace="index::footer"></footer>
 <script src="/js/findTicket.js"></script>
+<script th:replace="index::nav-active-js"></script>
 </body>
 </html>
